add button and image

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <h1>
         Hello World!
     </h1>
+    <div>
+        <button>click me</button>
+    </div>
+    <img src="https://hhp-blog.s3.amazonaws.com/2014/04/bigstock-Sunshine-Vitamin-D-61736075.jpg">
 </body>
 </html>
