--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div>
         <button>click me</button>
     </div>
+    <div class="right">how are you</div>
     <img src="https://hhp-blog.s3.amazonaws.com/2014/04/bigstock-Sunshine-Vitamin-D-61736075.jpg">
 </body>
 </html>
