--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         Hello World!
     </h1>
     <div>
-        <button>click me</button>
+        <button onclick="alert('Hello')">click me</button>
     </div>
-    <div class="right">how are you</div>
+    <div class="jiright">how are you</div>
     <img src="https://hhp-blog.s3.amazonaws.com/2014/04/bigstock-Sunshine-Vitamin-D-61736075.jpg">
 </body>
 </html>
