--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         Hello World!
     </h1>
     <div>
-        <button onclick="alert('Hello')">click me</button>
+        <button onclick="alert('Hello')">Click me</button>
+    </div>
+    <div>
+        <button onclick="this.style.backgroundColor = '#CCDDEE' ">Click me 2</button>
     </div>
     <div class="jiright">how are you</div>
     <img src="https://hhp-blog.s3.amazonaws.com/2014/04/bigstock-Sunshine-Vitamin-D-61736075.jpg">
