made Expanding cards by myself

--- a/Expanding_Cards/index.html
+++ b/Expanding_Cards/index.html
@@ -8,26 +8,16 @@
     <title>Expanding Cards</title>
 </head>
 <body>
+    <div class="title"><h1>The world is amazing. Don't lose your passion!</h1></div>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1583852778387-ef06e408830b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80');">
-        <h3>Explore Hangzhou</h3>
-        </div>
-        <div class="panel" style="background-image: url('https://icrvb3jy.xinmedia.com/solomo/article/76674/E618EC8A-94D4-721C-A16D-FF2FF9B49972.jpg');">
-        <h3>三潭映月</h3>
-        </div>
-        <div class="panel" style="background-image: url('https://m.0951njl.com/uploads/allimg/170805/1-1FP5105156250.jpg');">
-        <h3>雷峰夕照</h3>
-        </div>
-        <div class="panel" style="background-image: url('https://icrvb3jy.xinmedia.com/solomo/article/75803/F919B3BA-5FF1-C9AC-4F66-6CCD0F0C57DC.jpg');">
-        <h3>苏堤春晓</h3>
-        </div>
-        <div class="panel" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWxnRx3PzN6FzJzTvXG-e6HqVBhP7NYMBp7Q7gE7hxLSPOUvI2S2bmFy3E4hwYcFPqm3M&usqp=CAU');">
-        <h3>断桥残雪</h3>
-        </div>
-
-
+        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1614637596322-2bf6546a0086?ixid=MXwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8RnpvM3p1T0hONnd8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"><h3>Travel around the world 1</h3></div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1614612571621-d78ad98891f0?ixid=MXwxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8RnpvM3p1T0hONnd8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"><h3>Travel around the world 2</h3></div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1587311928889-35ea777bd23f?ixid=MXwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8RnpvM3p1T0hONnd8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"><h3>Travel around the world 3</h3></div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1609884610438-c22fec256708?ixid=MXwxMjA3fDB8MHx0b3BpYy1mZWVkfDl8RnpvM3p1T0hONnd8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"><h3>Travel around the world 4</h3></div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1614467019669-5b33810c8a7b?ixid=MXwxMjA3fDB8MHx0b3BpYy1mZWVkfDUxfEZ6bzN6dU9ITjZ3fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"><h3>Travel around the world 5</h3></div>
+        
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
